# Netbox-Proxmox-Importer

./: .gitignore  README.md  pyproject.toml  requirements.txt
netbox_proxmox_import/: __init__.py  netbox-plugin.yaml
netbox_proxmox_import/api/: serializers.py  sync.py  views.py
netbox_proxmox_import/api/netbox/: categorizer.py  parser.py  updater.py
netbox_proxmox_import/api/proxmox/: connector.py
netbox_proxmox_import/management/commands/: proxmox_sync.py
netbox_proxmox_import/templates/netbox_proxmox_import/: management_panel.html  proxmoxconnection.html
